# software-challenge

./: .challenge_solution_launch.py.swp  README.txt  challenge_solution_launch.py  launch.py  launcher.py  lazydemo
install/: local_setup.sh  setup.sh
install/challenge/lib/challenge/: solution
install/challenge/share/challenge/: local_setup.sh  package.sh
install/turtle_package/lib/turtle_package/: turtle_node  turtle_sine
install/turtle_package/share/ament_index/resource_index/parent_prefix_path/: turtle_package
install/turtle_package/share/turtle_package/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtle_package/share/turtle_package/cmake/: turtle_packageConfig.cmake
install/turtle_package/share/turtle_package/launch/: turtle_sine_launch.py
log/: latest_build
src/challenge/: CMakeLists.txt  package.xml
src/challenge/src/: solution  solution.cpp  turtlesim_controller.cpp
src/install/: local_setup.sh  setup.sh
src/install/challenge/lib/: solution
src/install/challenge/share/challenge/: local_setup.sh  package.sh
src/log/: latest_build
src/turtle_package/: CMakeLists.txt
src/turtle_package/launch/: turtle_sine.launch.py
src/turtle_package/src/: turtle_node.cpp  turtle_publisher.cpp
